# x-news-autoposter

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  post.yml
data/: state.db
src/x_news_autoposter/: __init__.py  cli.py  config.py  generator.py  poster.py  scheduler.py  selector.py  sources.py  store.py
tests/: test_generator.py  test_scheduler.py  test_selector.py  test_store.py
