[project]
name = "x-news-autoposter"
version = "0.1.0"
description = "Automated X (Twitter) poster that aggregates tech and geopolitics news and posts curated updates on a schedule."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sohail Hussain", email = "patel.kirtiasus@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "tweepy>=4.14.0",
    "groq>=0.11.0",
    "python-dotenv>=1.0.1",
    "tomli>=2.0.1; python_version < '3.11'",
    "click>=8.1.7",
    "rich>=13.7.1",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
x-news = "x_news_autoposter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x_news_autoposter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
